# label_printer_service

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  generator.py  main.py  printer.py  pyproject.toml  rfcomm_manager.py
brother_ptouch/: labelmaker_encode.py  ptstatus.py  serialcomm.py
test/: test_post_label.py
web/: app.py
web/templates/: index.html
