[project]
name = "label-printer-service"
version = "0.1.0"
description = "Web service and CLI for generating and printing labels on Brother PT-P300BT via Bluetooth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.2.0",
    "flask>=3.0.0",
    "pyserial>=3.5",
    "packbits>=0.6",
]
